@@ -12,12 +12,13 @@ plot3d.pcaridge <-
 
 
 plot3d.ridge <-
-function(x, variables=1:3, radius=1, lwd=1, lty=1, 
+function(x, variables=1:3, radius=1, which.lambda=1:length(x$lambda),
+		lwd=1, lty=1, 
 		xlim, ylim, zlim,
 		xlab, ylab, zlab,
 		col = c("black", "red", "darkgreen", "blue","darkcyan","magenta", "brown","darkgray"),
 #		c("black", rainbow(n.ell, start=.6, end=.1)),    # or, use rainbow colors by default?
-		labels=x$lambda, 
+		labels=lambda, 
 #		center.pch = 16, center.cex=1.5, 
 		ref=TRUE, ref.col=gray(.70), 
 		segments=40,          # line segments in each ellipse
@@ -81,10 +82,10 @@ function(x, variables=1:3, radius=1, lwd=1, lty=1,
 		warning("Only three variables will be plotted")
 		variables <- variables[1:3]
 	}
-	lambda <- x$lambda
 	vnames <- vnames[variables]
-	coef <- x$coef[,variables]
-	cov <- x$cov
+	lambda <- x$lambda[which.lambda]
+	coef <- x$coef[which.lambda,variables]
+	cov <- x$cov[which.lambda]
 	n.ell <- length(lambda)
 	if (missing(xlab)) xlab <- vars[1]
 	if (missing(ylab)) ylab <- vars[2]
